# My_blog

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/: schema.yml
backend/api/: apps.py  permissions.py  urls.py
backend/api/serializers/: posts.py  users.py
backend/api/views/: posts.py  users.py
backend/backend/: settings.py  urls.py
backend/posts/: admin.py  apps.py  models.py
backend/posts/migrations/: 0001_initial.py  0002_initial.py
backend/tests/: test_post.py
backend/tests/fixtures/: fixture_data.py  fixture_user.py
backend/users/: admin.py  apps.py  models.py  permissions.py  serializers.py  tests.py  views.py
backend/users/migrations/: 0001_initial.py
